objects/CCMS_ProdLevel2__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCMS_DB_Id__c</fullName>
        <externalId>true</externalId>
        <label>CCMS DB Id</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CCMS_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CCMS Product</label>
        <referenceTo>CCMS_Product__c</referenceTo>
        <relationshipLabel>CCMS Product</relationshipLabel>
        <relationshipName>CCMS_PRODLEVEL2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prodlevel2__c</fullName>
        <externalId>true</externalId>
        <label>Prodlevel2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>CCMS ProdLevel2</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CCMS ProdLevel2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CCMS ProdLevel2</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>